Se añade funcionalidad al botón cancelar para regresar a la vista principal

--- a/core/templates/core/articulo_form.html
+++ b/core/templates/core/articulo_form.html
@@ -74,7 +74,7 @@
     </div>
 
     <button type="submit" class="confirm-btn">Confirmar</button>
-    <button type="button" class="cancel-btn">Cancelar</button>
+    <button type="button" class="cancel-btn" onclick="window.location.href='{% url 'articulo-list' %}'">Cancelar</button>
   </form>
 </div>
 </body>
