--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -186,7 +186,7 @@
             <div class="card-content">
               <h2 class="item-name">{{articulo.nombre}}</h2>
               <p class="item-location">{{articulo.ubicacion}}</p>
-              <p class="item-datetime">{{articulo.fecha_subida}}</p>
+              <p class="item-datetime" style="padding: 20px;">{{articulo.fecha_subida}}</p>
               {% comment %} <a href="{% url 'articulo-detail' articulo.pk %}" type="button" class="arrow-icon"></a> {% endcomment %}
               <button type="button" class="arrow-icon" onclick="location.href='{% url 'articulo-detail' articulo.pk %}'">
                 <svg
