--- a/core/static/core/styles/style_listado_articulos.css
+++ b/core/static/core/styles/style_listado_articulos.css
@@ -20,7 +20,7 @@ header {
   z-index: 10; /* superponer el header por encima del hero */
 }
 .container-bread{
-  margin-top: 50px;
+  /*margin-top: 50px;*/
   display: flex;
   align-items: center;
   /* justify-content: center; */
