--- a/core/templates/core/articulos_listado.html
+++ b/core/templates/core/articulos_listado.html
@@ -112,7 +112,7 @@
             <h2 class="product-section__title">Artículos disponibles</h2>
           </div>
           <div>
-            <p class="product-section__text">Aquí encontrarás tus artículos favoritos para intercambiar por alguno que ya no necesites. Recuerda, ¿para qué tirar si puedes reciclar?</p>
+            <!-- <p class="product-section__text">Aquí encontrarás tus artículos favoritos para intercambiar por alguno que ya no necesites. Recuerda, ¿para qué tirar si puedes reciclar?</p> -->
           </div>
         </div>
         
@@ -131,22 +131,7 @@
               <h2 class="no-images" style="margin-bottom: 95px;">No hay imagenes disponibles</h2>
               {% endif %}
                 
-              <button type="button" class="like-icon">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  class="svg-heart-icon"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z"
-                  />
-                </svg>
-              </button>
+              
             </div>
             <div class="card-content">
               <h2 class="item-name">{{articulo.nombre}}</h2>
