--- a/core/static/core/styles/product-details.css
+++ b/core/static/core/styles/product-details.css
@@ -8,6 +8,7 @@
   body {
     /* font-size: 62.5%; */
     /* background-color: #cb0000; */
+    background: #f3f5fa !important;
     display: flex;
     justify-content: center;
     height: 100vh;
