se corrige el nombre del archivo del avatar de kevin

--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -85,7 +85,7 @@
         <div class="container-team">
             <div class="people-container">
                 <div class="people">
-                    <img src="{% static 'core/assets/kevin.png' %}" alt="memoji de Kevin">
+                    <img src="{% static 'core/assets/Kevin.png' %}" alt="memoji de Kevin">
                 </div>
                 <h3>Kevin Baizabal</h3>
             </div>
