Se cambian los titulos de las paginas

--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sobre nosotros</title>
+    <title>Ecotrueques | Sobre nosotros</title>
     <link rel="stylesheet" href="{% static 'core/styles/about.css' %}" />
   </head>
   <body>
