--- a/core/templates/core/articulo_form.html
+++ b/core/templates/core/articulo_form.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upload Form</title>
+    <title>Ecotrueques | Subir articulo</title>
     <link rel="stylesheet" href="{% static 'core/styles/upload.css' %}" />
 </head>
 <body>
