cambio del nombre del boton de iniciar sesion en la vista about

--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -40,7 +40,7 @@
             {% if not request.user.is_authenticated %}
             
             <li>
-              <button class="btnLogin-popup" onclick="window.location.href='{% url 'login' %}'">Inicia sesión</button>
+              <button class="btnLogin-popup" onclick="window.location.href='{% url 'login' %}'">Iniciar sesión</button>
             </li>
             
             <li>
