Se cambian los titulos

--- a/registration/templates/registration/signup.html
+++ b/registration/templates/registration/signup.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
     <link href="{% static 'core/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'core/vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
-    <title>register</title>
+    <title>Ecotrueques | Registrarse</title>
 </head>
 <body>
     <h1>Registro</h1>
