--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{% static 'core/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'core/vendor/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
-    <title>log</title>
+    <title>Ecotrueques | Iniciar sesión</title>
 </head>
 <body>
     <h1>Iniciar sesion</h1>
