se cambia el titulo de la vista y su meta descripcion

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ecotrueques | Inicio</title>
+    <meta name="description" content="Intercambia artículos que ya no usas y encuentra cosas que te interesan. ¡Dale una segunda vida a tus objetos!">
     <link rel="stylesheet" href="{% static 'core/styles/style-home.css' %}" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
