se cambia el mensaje de contraseña olvidada por uno de registrarse

--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -34,7 +34,8 @@
           </p>
           <p><input type="submit" class="btn btn-primary btn-block" value="Acceder"></p>
         </form>
-        <p>¿Ha olvidado su contraseña? Puede restaurarla <a href="{% url 'password_reset' %}">aquí.</a></p>
+        <!-- <p>¿Ha olvidado su contraseña? Puede restaurarla <a href="{% url 'password_reset' %}">aquí.</a></p> -->
+        <p>¿No tienes una cuenta? Puedes registrarte <a href="{% url 'signup' %}">aquí.</a></p>
       </div>
     </div>
   </div>
