se añade un link al boton de comenzar a intercambiar

--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -70,7 +70,7 @@
             hacemos que intercambiar productos sea fácil y significativo,
             brindando a cada artículo una segunda oportunidad de ser útil.
           </p>
-          <button class="start-btn">Comenzar a intercambiar</button>
+          <button class="start-btn" onclick="window.location.href='{% url 'login' %}'">Comenzar a intercambiar</button>
         </div>
         <div class="image">
             <img src="{% static 'core/assets/image.png' %}" alt="Imagen de un intercambio">
