Se añade un texto para ver quien subió el comentario

--- a/core/templates/core/articulo_detail.html
+++ b/core/templates/core/articulo_detail.html
@@ -58,7 +58,13 @@
                     {% for comentario in comentarios %}
                     <div class="card mb-2">
                         <div class="card-body">
+                            {% if articulo.usuario == comentario.usuario and not articulo.usuario == request.user %}
+                            <h5 class="card-title">{{ comentario.usuario.username }} <strong style="color: rgb(19, 143, 19);">(Dueño)</strong></h5>
+                            {% elif comentario.usuario == request.user %}
+                            <h5 class="card-title">{{ comentario.usuario.username }} <strong style="color: blue;">(Tú)</strong></h5>
+                            {% else %}
                             <h5 class="card-title">{{ comentario.usuario.username }}</h5>
+                            {% endif %}
                             <p class="card-text">{{ comentario.texto }}</p>
                             <p class="text-muted">{{ comentario.fecha_creacion }}</p>
                             
