--- a/core/static/core/styles/style-home.css
+++ b/core/static/core/styles/style-home.css
@@ -294,7 +294,7 @@ header {
   font-size: 1.1rem;
   font-family: var(--font-family);
   font-weight: 500;
-  transition: .5s;
+  transition: 0.5s;
 }
 
 #button-see-all:hover {
@@ -302,4 +302,56 @@ header {
   border: 0.125rem solid #162938;
   color: #162938;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 600px) {
+  .navbar {
+    flex-direction: column;
+    padding: 1rem;
+  }
+
+  .navbar ul {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .navbar a {
+    padding: 0.5rem 1rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .hero-content h1 {
+    font-size: 1.5rem;
+  }
+
+  .hero-content h2 {
+    font-size: 4rem;
+  }
+
+  .hero-content p {
+    font-size: 1rem;
+    max-width: 100%;
+  }
+
+  .product-section__title {
+    font-size: 2rem;
+    padding-left: 1rem;
+  }
+
+  .product-section__text {
+    margin: 1rem;
+  }
+
+  .card-container {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .card {
+    width: 100%;
+  }
+
+  #button-see-all {
+    width: 100%;
+  }
 }
