--- a/core/templates/core/articulos_listado.html
+++ b/core/templates/core/articulos_listado.html
@@ -54,6 +54,21 @@
           margin-bottom: 1rem; /* Añade más espacio entre columnas */
         }
       }
+
+      /* Centrar columnas en dispositivos pequeños */
+@media (max-width: 576px) {
+  .row {
+    display: flex;
+    justify-content: center; /* Centra el contenido en la fila */
+    flex-wrap: wrap; /* Permite que las columnas se ajusten en la fila */
+  }
+
+  .col-sm-6,
+  .col-12 {
+    flex: 0 1 auto; /* Evitar que colapse el ancho de las columnas */
+    margin: 0.5rem; /* Espaciado entre las columnas */
+  }
+}
     </style>
   </head>
   <body>
@@ -84,15 +99,15 @@
       <div class="container my-3">
         <!-- Lista de artículos -->
         <section id="product-section">
-          <div class="text-center mb-4">
-            <h2 class="product-section__title">Artículos disponibles</h2>
+          <div class="text-center mb-4" style="text-align: center; margin: auto;">
+            <h2 class="product-section__title" style="margin: auto; text-align: center;">Artículos disponibles</h2>
           </div>
-
-          <div class="row g-4"> <!-- Ajuste del espaciado entre columnas con Bootstrap -->
+      
+          <div class="d-flex flex-wrap justify-content-center"> <!-- Ajuste del espaciado y centrado -->
             {% for articulo in articulos %}
-            <div class="col-lg-3 col-md-4 col-sm-6">
-              <div class="card h-100">
-                <div class="card-img-top" onclick="location.href='{% url 'articulo-detail' articulo.pk %}'"> <!-- Redirección al hacer clic en la imagen -->
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12"> <!-- Columna adaptada para móviles -->
+              <div class="card h-100" style="margin: auto;">
+                <div class="card-img-top" onclick="location.href='{% url 'articulo-detail' articulo.pk %}'">
                   {% if articulo.imagen %}
                   <img src="{{ articulo.imagen.url }}" alt="Imagen del artículo" class="img-fluid zoom" style="width: 100%; height: 220px; object-fit: cover;" />
                   {% else %}
@@ -113,6 +128,7 @@
           </div>
         </section>
       </div>
+      
 
       <!-- Paginación -->
       <footer class="pagination justify-content-center my-3">
