--- a/core/templates/core/articulos_listado.html
+++ b/core/templates/core/articulos_listado.html
@@ -107,7 +107,7 @@
         <!-- Lista de artículos -->
         <section id="product-section">
           <div class="text-center mb-4" style="text-align: center; margin: auto;">
-            <h2 class="product-section__title" style="margin: auto; text-align: center;">Artículos disponibles</h2>
+            <h2 class="product-section__title" style="margin: auto; text-align: center; margin-right: 80px;">Artículos <br> disponibles</h2>
           </div>
       
           <div class="d-flex flex-wrap justify-content-center"> <!-- Ajuste del espaciado y centrado -->
