cambios de vista nav listado articulos

--- a/core/templates/core/articulos_listado.html
+++ b/core/templates/core/articulos_listado.html
@@ -101,7 +101,13 @@
         </div>
       </div>
     </nav>
-
+    <style>
+      @media (max-width: 599px) {
+    .product-section__title{
+      font-size: 40px;
+    }
+}
+    </style>
     <main>
       <div class="container my-3">
         <!-- Lista de artículos -->
