--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -35,6 +35,9 @@
               </li>
                 {% else %}
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'profile' %}">Ver perfil</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="{% url 'upload-articulo' %}">Subir articulo</a>
               </li>
                 <li class="nav-item mt-3">
