Se actualiza el estilo de las imagenes de los articulos en la vista principal

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -145,7 +145,7 @@
           <div class="card">
               <div class="card-img">
                 <a href="{% url 'articulo-detail' articulo.id %}">
-                  <img src="{{ articulo.imagen.url }}" class="card-img-top" alt="{{ articulo.nombre }}" style="width: 90%; height: 200px; object-fit: contain; max-height: 240px;">
+                  <img src="{{ articulo.imagen.url }}" class="card-img-top" alt="{{ articulo.nombre }}" style="width: 100%; height: 220px; object-fit: cover;">
                 </a>
               </div>
               <div class="card-body">
